# orders_list_app

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
orders/: apps.py  models.py  serializers.py  tests.py  views.py
orders_list_app/: asgi.py  settings.py  urls.py  wsgi.py
utils/: web.py
